<resources>
    <string name="app_name">Weight lifting volume tracker</string>
    <string name="enter_name">enter name</string>
    <string name="enter_description">enter description</string>
    <string name="delete_selected_plan">Delete selected plan and its data?</string>
    <string name="delete_selected_session">Delete selected session and its data?</string>
    <string name="delete_selected_exercise">Delete selected exercise?</string>
    <string name="clear_history">Clear history?</string>
    <string name="delete_selected_set">Delete selected set?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="created">Created:</string>
    <string name="edit_plan">Edit plan</string>
    <string name="edit_session">Edit session</string>
    <string name="delete_plan">Delete plan</string>
    <string name="delete_session">Delete session</string>
    <string name="update_session">Update session</string>
    <string name="add_exercise">Add exercise</string>
    <string name="edit">Edit</string>
    <string name="show_chart">Show volume charts</string>
    <string name="show_all_sessions">Show all sessions</string>
    <string name="select_session">Select session</string>
    <string name="select_date">Select date</string>
    <string name="current_session">Current session</string>
    <string name="current_set">Current set</string>
    <string name="training_sessions">Training sessions</string>
    <string name="exercises">Exercises</string>
    <string name="previous_session">Previous session</string>
    <string name="session_from">Session from:</string>
    <string name="menu">Menu</string>
    <string name="delete">Delete</string>
    <string name="clear_data">Clear history</string>
    <string name="create_plan">Create plan</string>
    <string name="create_session">Create session</string>
    <string name="create_exercise">Create exercise</string>
    <string name="save_plan">Save plan</string>
    <string name="save_session">Save session</string>
    <string name="your_plans">Your plans</string>
    <string name="sessions">Sessions</string>
    <string name="sort">Sort</string>
    <string name="close">close</string>
    <string name="back">Back</string>
    <string name="plan">Plan</string>
...
    <string name="pause_time">Total pause time</string>
    <string name="pause_time_sec">Pause between sets (sec)</string>
    <string name="number_of_sessions">Number of sessions</string>
    <string name="history">History</string>
    <string name="menu_icon">⋮</string>
    <string name="name">Name</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="date">Date</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="asc">Ascending</string>
    <string name="desc">Descending</string>
    <string name="deleted">deleted!</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="last_session">Last session</string>
</resources>
